<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ibm.uprefs.RegisterActivity" >
    
    <EditText
        android:id="@+id/txtEnterprise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/enterprise"
        android:layout_alignBottom="@+id/enterprise"
        android:layout_alignLeft="@+id/textPassword"
        android:layout_marginTop="25dp"
        android:hint="@string/enterprise"
        android:ems="10" />
   
    <EditText
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password"
        android:layout_alignBottom="@+id/password"
        android:layout_alignLeft="@+id/textEmailAddress"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/textPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/name"
        android:layout_alignBottom="@+id/name"
        android:layout_alignLeft="@+id/txtEnterprise"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/email"
        android:layout_alignLeft="@+id/register_button"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textEmailAddress"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="24dp"
        android:layout_toLeftOf="@+id/textPassword"
        android:text="@string/password" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textPassword"
        android:layout_alignLeft="@+id/password"
        android:layout_marginBottom="54dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/enterprise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textPassword"
        android:layout_alignLeft="@+id/name"
        android:text="@string/enterprise" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password"
        android:layout_centerVertical="true"
        android:text="@string/email" />

</RelativeLayout>