<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ibm.uprefs.PreferencesActivity" >

    <TextView
        android:id="@+id/timezone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/timezone" />

    <TextView
        android:id="@+id/txtCommunication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/change_button"
        android:layout_alignTop="@+id/communication"
        android:layout_marginLeft="25dp"
        android:text="@string/communication"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/change_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCommunication"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/communication"
        android:enabled="true"
        android:text="@string/change" />

    <TextView
        android:id="@+id/txtTimezone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/timezone"
        android:layout_alignBottom="@+id/timezone"
        android:layout_alignLeft="@+id/txtCommunication"
        android:text="@string/timezone"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/communication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/location"
        android:layout_below="@+id/location"
        android:layout_marginTop="30dp"
        android:text="@string/communication" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timezone"
        android:layout_below="@+id/txtTimezone"
        android:layout_marginTop="26dp"
        android:text="@string/location" />

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCommunication"
        android:layout_alignTop="@+id/location"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
</RelativeLayout>